--- a/dotnet/Directory.Build.props.in
+++ b/dotnet/Directory.Build.props.in
@@ -14,18 +14,18 @@
        <!-- Pack Option -->
        <PackageTags>native;sample</PackageTags>
        <PackageIcon>content/logo.png</PackageIcon>
-       <PackageProjectUrl>https://github.com/mizux/cmake-swig</PackageProjectUrl>
+       <PackageProjectUrl>https://github.com/mizux/dotnet-native</PackageProjectUrl>
        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-       <PackageOutputPath>../packages</PackageOutputPath>
+       <PackageOutputPath>@DOTNET_PACKAGES_DIR@</PackageOutputPath>
        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
        <RepositoryType>git</RepositoryType>
-       <RepositoryUrl>https://github.com/mizux/cmake-swig</RepositoryUrl>
+       <RepositoryUrl>https://github.com/mizux/dotnet-native</RepositoryUrl>
         <!--Disable CS1591 "Missing XML comment for publicly visible type or member" (Swig doesn't generate documentation)-->
         <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="../logo.png">
+    <None Include="@DOTNET_LOGO_DIR@/logo.png">
       <Pack>True</Pack>
       <PackagePath>content</PackagePath>
     </None>
