--- a/Bar/dotnet/CMakeLists.txt
+++ b/Bar/dotnet/CMakeLists.txt
@@ -1,12 +1,12 @@
 set_property(SOURCE bar.i PROPERTY CPLUSPLUS ON)
 set_property(SOURCE bar.i PROPERTY COMPILE_OPTIONS
-  -namespace ${CMAKE_SWIG_DOTNET}.Bar
+  -namespace ${DOTNET_PROJECT}.Bar
   -dllimport mizux-cmakeswig-native)
 swig_add_library(dotnet_Bar
   TYPE OBJECT
   LANGUAGE csharp
-  OUTPUT_DIR ${PROJECT_BINARY_DIR}/dotnet/${PROJECT_NAME}/Bar
-  SOURCES	bar.i)
+  OUTPUT_DIR ${PROJECT_BINARY_DIR}/dotnet/${DOTNET_PROJECT}/Bar
+  SOURCES bar.i)
 
 set_target_properties(dotnet_Bar PROPERTIES
   SWIG_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/dotnet
