--- a/dotnet/Mizux.CMakeSwig.csproj.in
+++ b/dotnet/Mizux.CMakeSwig.csproj.in
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
-    <AssemblyName>@CMAKE_SWIG_DOTNET@</AssemblyName>
+    <AssemblyName>@DOTNET_PROJECT@</AssemblyName>
     <Version>@PROJECT_VERSION@</Version>
 
     <!-- Nuget Properties -->
     <Description>.NET wrapper for the CMakeSwig project</Description>
 
     <!-- Pack Option -->
-    <Title>@CMAKE_SWIG_DOTNET@ v@PROJECT_VERSION@</Title>
-    <PackageId>@CMAKE_SWIG_DOTNET@</PackageId>
+    <Title>@DOTNET_PROJECT@ v@PROJECT_VERSION@</Title>
+    <PackageId>@DOTNET_PROJECT@</PackageId>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
@@ -21,36 +21,21 @@
     <DelaySign>false</DelaySign>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Include="../CMakeSwig/Foo/*.cs">
-      <Link>Foo/%(Filename)%(Extension)</Link>
-    </Compile>
-
-    <Compile Include="../CMakeSwig/Bar/*.cs">
-      <Link>Bar/%(Filename)%(Extension)</Link>
-    </Compile>
-
-    <Compile Include="../CMakeSwig/FooBar/*.cs">
-      <Link>FooBar/%(Filename)%(Extension)</Link>
-    </Compile>
-
-  </ItemGroup>
-
   <!-- Validate at least one runtime package has been generated -->
   <Target Name="ValidateRuntimePack" BeforeTargets="GenerateNuspec">
     <ItemGroup>
-      <RuntimeLinux Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.linux-x64.*.nupkg"/>
-      <RuntimeOsx Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.osx-x64.*.nupkg"/>
-      <RuntimeWin Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.win-x64.*.nupkg"/>
+      <RuntimeLinux Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.linux-x64.*.nupkg"/>
+      <RuntimeOsx Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.osx-x64.*.nupkg"/>
+      <RuntimeWin Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.win-x64.*.nupkg"/>
     </ItemGroup>
-    <Message Importance="high" Text="Package Mizux.CMakeSwig.runtime.linux-x64: found" Condition="Exists('@(RuntimeLinux)')"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.linux-x64: found" Condition="Exists('@(RuntimeLinux)')"/>
     <Message Importance="high" Text="-------  $(OS)  "/>
-    <Message Importance="high" Text="Package Mizux.CMakeSwig.runtime.linux-x64: not found" Condition="!Exists('@(RuntimeLinux)')"/>
-    <Message Importance="high" Text="Package Mizux.CMakeSwig.runtime.osx-x64: found" Condition="Exists('@(RuntimeOsx)')"/>
-    <Message Importance="high" Text="Package Mizux.CMakeSwig.runtime.osx-x64: not found" Condition="!Exists('@(RuntimeOsx)')"/>
-    <Message Importance="high" Text="Package Mizux.CMakeSwig.runtime.win-x64: found" Condition="Exists('@(RuntimeWin)')"/>
-    <Message Importance="high" Text="Package Mizux.CMakeSwig.runtime.win-x64: not found" Condition="!Exists('@(RuntimeWin)')"/>
-    <Error Text="You must locally 'dotnet pack' at least one Mizux.CMakeSwig.runtime.{rid} Project." Condition="!Exists('@(RuntimeLinux)') AND !Exists('@(RuntimeOsx)') AND !Exists('@(RuntimeWin)')"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.linux-x64: not found" Condition="!Exists('@(RuntimeLinux)')"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.osx-x64: found" Condition="Exists('@(RuntimeOsx)')"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.osx-x64: not found" Condition="!Exists('@(RuntimeOsx)')"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.win-x64: found" Condition="Exists('@(RuntimeWin)')"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.win-x64: not found" Condition="!Exists('@(RuntimeWin)')"/>
+    <Error Text="You must locally 'dotnet pack' at least one @DOTNET_PROJECT@.runtime.{rid} Project." Condition="!Exists('@(RuntimeLinux)') AND !Exists('@(RuntimeOsx)') AND !Exists('@(RuntimeWin)')"/>
   </Target>
 
   <!-- Need to add required runtime dependencies so Meta-Project will pull runtime Nuget(s) -->
@@ -59,12 +44,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <RuntimeLinux Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.linux-x64.*.nupkg"/>
-    <RuntimeOsx Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.osx-x64.*.nupkg"/>
-    <RuntimeWin Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.win-x64.*.nupkg"/>
-    <PackageReference Include="Mizux.CMakeSwig.runtime.linux-x64" Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeLinux)')"/>
-    <PackageReference Include="Mizux.CMakeSwig.runtime.osx-x64"   Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeOsx)')"  />
-    <PackageReference Include="Mizux.CMakeSwig.runtime.win-x64"   Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeWin)')"  />
+    <RuntimeLinux Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.linux-x64.*.nupkg"/>
+    <RuntimeOsx Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.osx-x64.*.nupkg"/>
+    <RuntimeWin Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.win-x64.*.nupkg"/>
+    <PackageReference Include="@DOTNET_PROJECT@.runtime.linux-x64" Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeLinux)')"/>
+    <PackageReference Include="@DOTNET_PROJECT@.runtime.osx-x64"   Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeOsx)')"  />
+    <PackageReference Include="@DOTNET_PROJECT@.runtime.win-x64"   Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeWin)')"  />
   </ItemGroup>
 </Project>
 
