--- a/ci/samples/dotnet/Mizux.Sample.csproj
+++ b/ci/samples/dotnet/Mizux.Sample.csproj
@@ -2,13 +2,23 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <LangVersion>7.3</LangVersion>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <!-- see https://github.com/dotnet/docs/issues/12237 -->
     <RollForward>LatestMajor</RollForward>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AssemblyName>Mizux.Sample</AssemblyName>
+    <Version>1.0.0</Version>
+
+    <!-- Nuget Properties -->
+    <Description>Simple App consuming CMakeSwig package</Description>
 
     <!-- Pack Option -->
     <IsPackable>false</IsPackable>
+
+    <!-- Signing -->
+    <SignAssembly>false</SignAssembly>
+    <PublicSign>false</PublicSign>
+    <DelaySign>false</DelaySign>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -23,9 +33,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="Mizux.CMakeSwig" Version="*" />
   </ItemGroup>
 </Project>
