--- a/java/pom-local.xml.in
+++ b/java/pom-local.xml.in
@@ -70,7 +70,7 @@
   <dependency>
     <groupId>net.java.dev.jna</groupId>
     <artifactId>jna-platform</artifactId>
-    <version>5.5.0</version>
+    <version>5.8.0</version>
   </dependency>
 </dependencies>
 
@@ -93,6 +93,12 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-javadoc-plugin</artifactId>
       <version>3.2.0</version>
+      <configuration>
+        <detectJavaApiLink>false</detectJavaApiLink>
+        <source>${maven.compiler.source}</source>
+        <target>${maven.compiler.target}</target>
+        <additionalJOption>-Xdoclint:none</additionalJOption>
+      </configuration>
       <executions>
         <execution>
           <id>attach-javadocs</id>
@@ -113,9 +119,49 @@
           <goals>
             <goal>sign</goal>
           </goals>
+          <configuration>
+            <gpgArguments>
+              @GPG_ARGS@
+            </gpgArguments>
+          </configuration>
         </execution>
       </executions>
     </plugin>
   </plugins>
 </build>
+
+<profiles>
+  <profile>
+    <id>build-fat-jar</id>
+    <activation>
+      <property>
+        <name>fatjar</name>
+        <value>true</value>
+      </property>
+    </activation>
+    <build>
+      <plugins>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <configuration>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+            <appendAssemblyId>false</appendAssemblyId>
+          </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id> <!-- this is used for inheritance merges -->
+              <phase>package</phase> <!-- bind to the packaging phase -->
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
+</profiles>
+
 </project>
