--- a/java/pom-native.xml.in
+++ b/java/pom-native.xml.in
@@ -83,6 +83,12 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-javadoc-plugin</artifactId>
       <version>3.2.0</version>
+      <configuration>
+        <detectJavaApiLink>false</detectJavaApiLink>
+        <source>${maven.compiler.source}</source>
+        <target>${maven.compiler.target}</target>
+        <additionalJOption>-Xdoclint:none</additionalJOption>
+      </configuration>
       <executions>
         <execution>
           <id>attach-javadocs</id>
@@ -103,6 +109,11 @@
           <goals>
             <goal>sign</goal>
           </goals>
+          <configuration>
+            <gpgArguments>
+              @GPG_ARGS@
+            </gpgArguments>
+          </configuration>
         </execution>
       </executions>
     </plugin>
