cmake: rework java

--- a/FooBar/java/CMakeLists.txt
+++ b/FooBar/java/CMakeLists.txt
@@ -4,8 +4,7 @@ set_property(SOURCE foobar.i PROPERTY COMPILE_OPTIONS
 swig_add_library(jniFooBar
   TYPE OBJECT
   LANGUAGE java
-  OUTPUT_DIR
-  ${PROJECT_BINARY_DIR}/java/${JAVA_PROJECT}/${JAVA_PACKAGE_SRC_PATH}/foobar
+  OUTPUT_DIR ${JAVA_PROJECT_DIR}/${JAVA_SRC_PATH}/foobar
   SOURCES foobar.i)
 
 set_target_properties(jniFooBar PROPERTIES
