--- a/Bar/java/CMakeLists.txt
+++ b/Bar/java/CMakeLists.txt
@@ -4,8 +4,7 @@ set_property(SOURCE bar.i PROPERTY COMPILE_OPTIONS
 swig_add_library(jniBar
   TYPE OBJECT
   LANGUAGE java
-  OUTPUT_DIR
-  ${PROJECT_BINARY_DIR}/java/${JAVA_PROJECT}/${JAVA_PACKAGE_SRC_PATH}/bar
+  OUTPUT_DIR ${JAVA_PROJECT_DIR}/${JAVA_SRC_PATH}/bar
   SOURCES bar.i)
 
 set_target_properties(jniBar PROPERTIES
