--- a/Foo/java/CMakeLists.txt
+++ b/Foo/java/CMakeLists.txt
@@ -4,8 +4,7 @@ set_property(SOURCE foo.i PROPERTY COMPILE_OPTIONS
 swig_add_library(jniFoo
   TYPE OBJECT
   LANGUAGE java
-  OUTPUT_DIR
-  ${PROJECT_BINARY_DIR}/java/${JAVA_PROJECT}/${JAVA_PACKAGE_SRC_PATH}/foo
+  OUTPUT_DIR ${JAVA_PROJECT_DIR}/${JAVA_SRC_PATH}/foo
   SOURCES foo.i)
 
 set_target_properties(jniFoo PROPERTIES
