--- a/.github/workflows/amd64_linux_dotnet.yml
+++ b/.github/workflows/amd64_linux_dotnet.yml
@@ -34,6 +34,15 @@ jobs:
         rm -rf swig-4.0.2;
     - name: Check swig
       run: swig -version
+      # Install .NET SDKs
+    - name: Setup .NET Core 3.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
+    - name: Setup .NET 6.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
     - name: Check dotnet
       run: dotnet --info
     - name: Check cmake
@@ -71,6 +80,15 @@ jobs:
         rm -rf swig-4.0.2;
     - name: Check swig
       run: swig -version
+      # Install .NET SDKs
+    - name: Setup .NET Core 3.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
+    - name: Setup .NET 6.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
     - name: Check dotnet
       run: dotnet --info
     - name: Check cmake
@@ -104,6 +122,15 @@ jobs:
         rm -rf swig-4.0.2;
     - name: Check swig
       run: swig -version
+      # Install .NET SDKs
+    - name: Setup .NET Core 3.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
+    - name: Setup .NET 6.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
     - name: Check dotnet
       run: dotnet --info
     - name: Check cmake
