--- a/dotnet/Mizux.CMakeSwig.runtime.csproj.in
+++ b/dotnet/Mizux.CMakeSwig.runtime.csproj.in
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
     <RuntimeIdentifier>@RUNTIME_IDENTIFIER@</RuntimeIdentifier>
     <AssemblyName>mizux-cmakeswig-native</AssemblyName>
     <Version>@PROJECT_VERSION@</Version>
