--- a/.github/workflows/amd64_macos_dotnet.yml
+++ b/.github/workflows/amd64_macos_dotnet.yml
@@ -35,9 +35,7 @@ jobs:
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -v
     - name: Test
-      # note: can't use the target RUN_TESTS which seems to conflict with dotnet run/test command
-      #run: cmake --build build --config Release --target RUN_TESTS -v
-      run: cd build && ctest -C Release --verbose --extra-verbose --output-on-failure
+      run: cmake --build build --config Release --target RUN_TESTS -v
     - name: Install
       run: cmake --build build --config Release --target install -v
   make:
