--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -23,10 +23,11 @@ RUN dnf -y update \
 && dnf -y install pcre-devel \
 && dnf clean all \
 && rm -rf /var/cache/dnf \
-&& wget -q "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.2/swig-4.0.2.tar.gz" \
+&& wget -q "https://github.com/swig/swig/archive/refs/tags/v4.0.2.tar.gz" -O swig-4.0.2.tar.gz \
 && tar xvf swig-4.0.2.tar.gz \
 && rm swig-4.0.2.tar.gz \
 && cd swig-4.0.2 \
+&& ./autogen.sh \
 && ./configure --prefix=/usr \
 && make -j 4 \
 && make install \
