--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,18 @@ if(WIN32 AND (BUILD_DOTNET OR BUILD_JAVA OR BUILD_PYTHON))
   message(STATUS "Getting SWIG: ...DONE")
 endif()
 
+if(BUILD_DOTNET)
+  # .Net Core 3.1 LTS is not available for osx arm64
+  if(APPLE AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64)")
+    set(USE_DOTNET_TFM_31 OFF)
+  else()
+    option(USE_DOTNET_TFM_31 "Use .Net Core 3.1 LTS support" ON)
+  endif()
+  message(STATUS ".Net: Use .Net Core 3.1 LTS support: ${USE_DOTNET_TFM_31}")
+
+  option(USE_DOTNET_TFM_60 "Use .Net 6.0 LTS support" ON)
+  message(STATUS ".Net: Use .Net 6.0 LTS support: ${USE_DOTNET_TFM_60}")
+endif()
 include(dotnet)
 
 option(SKIP_GPG "Skip gpg sign" ON)
