--- a/dotnet/Mizux.CMakeSwig.runtime.csproj.in
+++ b/dotnet/Mizux.CMakeSwig.runtime.csproj.in
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
+    @DOTNET_TFM@
     <RuntimeIdentifier>@RUNTIME_IDENTIFIER@</RuntimeIdentifier>
     <AssemblyName>mizux-cmakeswig-native</AssemblyName>
     <Version>@PROJECT_VERSION@</Version>
@@ -22,12 +22,8 @@
 
   <ItemGroup>
     <!-- Native library must be in native directory... -->
-    <Content Include="$<TARGET_FILE:Bar>;$<TARGET_FILE:Foo>;$<TARGET_FILE:FooBar>">
-      <PackagePath>runtimes/@RUNTIME_IDENTIFIER@/native/%(Filename)%(Extension)</PackagePath>
-      <Pack>true</Pack>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="$<TARGET_FILE:mizux-cmakeswig-native>">
+    <!-- If built as a STATIC_LIBRARY (e.g. Windows) then we don't have to include it -->
+    <Content Include="$<TARGET_FILE:mizux-cmakeswig-native>$<$<STREQUAL:$<TARGET_PROPERTY:Bar,TYPE>,SHARED_LIBRARY>:;$<TARGET_SONAME_FILE:Bar>>$<$<STREQUAL:$<TARGET_PROPERTY:Foo,TYPE>,SHARED_LIBRARY>:;$<TARGET_SONAME_FILE:Foo>>$<$<STREQUAL:$<TARGET_PROPERTY:FooBar,TYPE>,SHARED_LIBRARY>:;$<TARGET_SONAME_FILE:FooBar>>">
       <PackagePath>runtimes/@RUNTIME_IDENTIFIER@/native/%(Filename)%(Extension)</PackagePath>
       <Pack>true</Pack>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
