cmake: hide option if language not enabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,12 +95,16 @@ if(BUILD_DOTNET)
 endif()
 include(dotnet)
 
-option(SKIP_GPG "Skip gpg sign" ON)
-message(STATUS "Maven skip GPG sign: ${SKIP_GPG}")
+if(BUILD_JAVA)
+  option(SKIP_GPG "Skip gpg sign" ON)
+  message(STATUS "Maven skip GPG sign: ${SKIP_GPG}")
+endif()
 include(java)
 
-option(FETCH_PYTHON_DEPS "Install python required modules if not available" ON)
-message(STATUS "Python fetch dependencies: ${FETCH_PYTHON_DEPS}")
+if(BUILD_PYTHON)
+  option(FETCH_PYTHON_DEPS "Install python required modules if not available" ON)
+  message(STATUS "Python fetch dependencies: ${FETCH_PYTHON_DEPS}")
+endif()
 include(python)
 
 add_subdirectory(tests)
