--- a/.github/workflows/amd64_macos_java.yml
+++ b/.github/workflows/amd64_macos_java.yml
@@ -1,16 +1,24 @@
 name: amd64 macOS Java
 
-on:
-  push:
-  pull_request:
-  schedule:
-    # min hours day(month) month day(week)
-    - cron: '0 0 7,22 * *'
+on: [push, pull_request]
 
 jobs:
   # Building using the github runner environement directly.
-  xcode:
+  macos:
     runs-on: macos-latest
+    strategy:
+       matrix:
+         build: [
+           ["Xcode", "Release", "ALL_BUILD", "RUN_TESTS", "install"],
+           ["Unix Makefiles", "Release", "all", "test", "install"]
+         ]
+       fail-fast: false
+    env:
+      GENERATOR: ${{ matrix.build[0] }}
+      BUILD_TYPE: ${{ matrix.build[1] }}
+      BUILD_TARGET: ${{ matrix.build[2] }}
+      TEST_TARGET: ${{ matrix.build[3] }}
+      INSTALL_TARGET: ${{ matrix.build[4] }}
     steps:
     - uses: actions/checkout@v2
     - name: Swig install
@@ -22,30 +30,10 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release -DCMAKE_INSTALL_PREFIX=install -DBUILD_JAVA=ON -DSKIP_GPG=ON
+      run: cmake -S. -Bbuild -G "$GENERATOR" -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DCMAKE_INSTALL_PREFIX=install -DBUILD_JAVA=ON -DSKIP_GPG=ON
     - name: Build
-      run: cmake --build build --config Release --target ALL_BUILD -v
+      run: cmake --build build --config "$BUILD_TYPE" --target "$BUILD_TARGET" -v
     - name: Test
-      run: cmake --build build --config Release --target RUN_TESTS -v
+      run: CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --config "$BUILD_TYPE" --target "$TEST_TARGET" -v
     - name: Install
-      run: cmake --build build --config Release --target install -v
-  make:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Swig install
-      run: brew install swig
-    - name: Check swig
-      run: swig -version
-    - name: Check mvn
-      run: mvn --version
-    - name: Check cmake
-      run: cmake --version
-    - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=install -DBUILD_JAVA=ON -DSKIP_GPG=ON
-    - name: Build
-      run: cmake --build build --target all -v
-    - name: Test
-      run: cmake --build build --target test -v
-    - name: Install
-      run: cmake --build build --target install -v
+      run: cmake --build build --config "$BUILD_TYPE" --target "$INSTALL_TARGET" -v
