ci: workflows update

--- a/.github/workflows/amd64_macos_dotnet.yml
+++ b/.github/workflows/amd64_macos_dotnet.yml
@@ -1,3 +1,4 @@
+# ref: https://github.com/actions/runner-images
 name: amd64 macOS .Net
 
 on: [push, pull_request, workflow_dispatch]
@@ -27,11 +28,11 @@ jobs:
       run: swig -version
       # Install .NET SDKs
     - name: Setup .NET Core 3.1
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 3.1.x
     - name: Setup .NET 6.0
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
     - name: Check dotnet
