--- a/ci/docker/opensuse/Dockerfile
+++ b/ci/docker/opensuse/Dockerfile
@@ -1,15 +1,16 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/r/opensuse/tumbleweed
 FROM opensuse/tumbleweed AS base
-
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN zypper update -y \
-&& zypper install -y git patch gcc gcc-c++ cmake \
+RUN zypper refresh \
+&& zypper install -y git gcc gcc-c++ cmake \
 && zypper clean -a
 ENV CC=gcc CXX=g++
+ENTRYPOINT ["/usr/bin/bash", "-c"]
+CMD [ "/usr/bin/bash" ]
 
 FROM base AS swig
-RUN zypper update -y \
+RUN zypper refresh \
 && zypper install -y swig \
 && zypper clean -a
