--- a/ci/docker/fedora/Dockerfile
+++ b/ci/docker/fedora/Dockerfile
@@ -1,7 +1,6 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/_/fedora
 FROM fedora:latest AS base
-
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN dnf -y update \
@@ -9,6 +8,7 @@ RUN dnf -y update \
 && dnf -y groupinstall "Development Tools" \
 && dnf -y install gcc-c++ cmake \
 && dnf clean all
+CMD [ "/usr/bin/bash" ]
 
 FROM base AS swig
 RUN dnf -y update \
