--- a/.github/workflows/amd64_linux_java.yml
+++ b/.github/workflows/amd64_linux_java.yml
@@ -28,17 +28,17 @@ jobs:
       run: |
         swig -version;
         sudo apt remove -y swig swig3.0
-    - name: Install SWIG 4.0.2
+    - name: Install SWIG 4.3.0
       run: |
-        wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.2/swig-4.0.2.tar.gz";
-        tar xvf swig-4.0.2.tar.gz;
-        rm swig-4.0.2.tar.gz;
-        cd swig-4.0.2;
+        wget -q "https://downloads.sourceforge.net/project/swig/swig/swig-4.3.0/swig-4.3.0.tar.gz";
+        tar xvf swig-4.3.0.tar.gz;
+        rm swig-4.3.0.tar.gz;
+        cd swig-4.3.0;
         ./configure --prefix=/usr;
         make -j8;
         sudo make install;
         cd ..;
-        rm -rf swig-4.0.2;
+        rm -rf swig-4.3.0;
     - name: Check swig
       run: swig -version
     - name: Check mvn
