--- a/.github/workflows/amd64_linux_dotnet.yml
+++ b/.github/workflows/amd64_linux_dotnet.yml
@@ -3,62 +3,84 @@ name: amd64 Linux .Net
 
 on: [push, pull_request, workflow_dispatch]
 
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
+
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
-  linux:
-    runs-on: ubuntu-latest
+  native:
     strategy:
-       matrix:
-         build: [
-           ["Unix Makefiles", "Release"],
-           ["Ninja", "Release"],
-           ["Ninja Multi-Config", "Release"]
-         ]
-       fail-fast: false
-    env:
-      GENERATOR: ${{ matrix.build[0] }}
-      BUILD_TYPE: ${{ matrix.build[1] }}
+      matrix:
+        cmake: [
+          {name: "Make", generator: "Unix Makefiles", config: "Release", build_target: all, test_target: test, install_target: install},
+          {name: "Ninja", generator: "Ninja", config: "Release", build_target: all, test_target: test, install_target: install},
+          {name: "NinjaMulti", generator: "Ninja Multi-Config", config: "Release", build_target: all, test_target: test, install_target: install},
+        ]
+      fail-fast: false
+    name: amd64•Linux•CMake(${{matrix.cmake.name}})•.Net
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Install Ninja
-      run: |
-        sudo apt-get update
-        sudo apt-get install ninja-build
-    - name: Uninstall preinstalled swig3.0
-      run: |
-        swig -version;
-        sudo apt remove -y swig swig3.0
-    - name: Install SWIG 4.3.0
-      run: |
-        wget -q "https://downloads.sourceforge.net/project/swig/swig/swig-4.3.0/swig-4.3.0.tar.gz";
-        tar xvf swig-4.3.0.tar.gz;
-        rm swig-4.3.0.tar.gz;
-        cd swig-4.3.0;
-        ./configure --prefix=/usr;
-        make -j8;
-        sudo make install;
-        cd ..;
-        rm -rf swig-4.3.0;
-    - name: Check swig
-      run: swig -version
-      # Install .NET SDKs
-    - name: Setup .NET Core 3.1
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 3.1.x
-    - name: Setup .NET 6.0
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 6.0.x
-    - name: Check dotnet
-      run: dotnet --info
-    - name: Check cmake
-      run: cmake --version
-    - name: Configure
-      run: cmake -S. -Bbuild -G "$GENERATOR" -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DCMAKE_INSTALL_PREFIX=install -DBUILD_DOTNET=ON
-    - name: Build
-      run: cmake --build build --config "$BUILD_TYPE" --target all -v
-    - name: Test
-      run: CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --config "$BUILD_TYPE" --target test -v
-    - name: Install
-      run: cmake --build build --config "$BUILD_TYPE" --target install -v
+      - uses: actions/checkout@v4
+      - name: Install Ninja
+        run: |
+          sudo apt-get update
+          sudo apt-get install ninja-build
+      - name: Uninstall preinstalled swig3.0
+        run: |
+          swig -version;
+          sudo apt remove -y swig swig3.0
+      - name: Install SWIG
+        run: |
+          wget -q "https://downloads.sourceforge.net/project/swig/swig/swig-4.3.0/swig-4.3.0.tar.gz";
+          tar xvf swig-4.3.0.tar.gz;
+          rm swig-4.3.0.tar.gz;
+          cd swig-4.3.0;
+          ./configure --prefix=/usr;
+          make -j8;
+          sudo make install;
+          cd ..;
+          rm -rf swig-4.3.0;
+      - name: Check swig
+        run: swig -version
+        # Install .NET SDKs
+      - name: Setup .NET 8.0
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Check dotnet
+        run: dotnet --info
+      - name: Check CMake
+        run: cmake --version
+      - name: Configure
+        run: >
+          cmake -S. -Bbuild
+          -G "${{matrix.cmake.generator}}"
+          -DCMAKE_BUILD_TYPE=${{matrix.cmake.config}}
+          -DBUILD_DOTNET=ON
+          -DCMAKE_INSTALL_PREFIX=install
+      - name: Build
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.build_target}}
+          -v -j2
+      - name: Test
+        run: >
+          CTEST_OUTPUT_ON_FAILURE=1
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.test_target}}
+          -v
+      - name: Install
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.install_target}}
+          -v
+
+  amd64_linux_dotnet:
+    runs-on: ubuntu-latest
+    needs: native
+    steps:
+      - uses: actions/checkout@v4
