--- a/.github/workflows/amd64_macos_python.yml
+++ b/.github/workflows/amd64_macos_python.yml
@@ -1,38 +1,76 @@
 # ref: https://github.com/actions/runner-images
-name: amd64 macOS Python
+name: amd64 MacOS Python
 
 on: [push, pull_request, workflow_dispatch]
 
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
+
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
-  macos:
-    runs-on: macos-latest
+  native:
     strategy:
-       matrix:
-         build: [
-           ["Xcode", "Release", "ALL_BUILD", "RUN_TESTS", "install"],
-           ["Unix Makefiles", "Release", "all", "test", "install"]
-         ]
-       fail-fast: false
-    env:
-      GENERATOR: ${{ matrix.build[0] }}
-      BUILD_TYPE: ${{ matrix.build[1] }}
-      BUILD_TARGET: ${{ matrix.build[2] }}
-      TEST_TARGET: ${{ matrix.build[3] }}
-      INSTALL_TARGET: ${{ matrix.build[4] }}
+      matrix:
+        cmake: [
+          {name: "Xcode", generator: "Xcode", config: Release, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: install},
+          {name: "Make", generator: "Unix Makefiles", config: Release, build_target: all, test_target: test, install_target: install},
+        ]
+        python: [
+          {version: "3.9"},
+          #{version: "3.10"},
+          #{version: "3.11"},
+          {version: "3.12"},
+          {version: "3.13"},
+        ]
+      fail-fast: false
+    name: amd64•MacOS•CMake(${{matrix.cmake.name}})•Py${{matrix.python.version}}
+    runs-on: macos-13 # last macos intel based runner
     steps:
-    - uses: actions/checkout@v4
-    - name: Swig install
-      run: brew install swig
-    - name: Check swig
-      run: swig -version
-    - name: Check cmake
-      run: cmake --version
-    - name: Configure
-      run: cmake -S. -Bbuild -G "$GENERATOR" -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DCMAKE_INSTALL_PREFIX=install -DBUILD_PYTHON=ON
-    - name: Build
-      run: cmake --build build --config "$BUILD_TYPE" --target "$BUILD_TARGET" -v
-    - name: Test
-      run: CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --config "$BUILD_TYPE" --target "$TEST_TARGET" -v
-    - name: Install
-      run: cmake --build build --config "$BUILD_TYPE" --target "$INSTALL_TARGET" -v
+      - uses: actions/checkout@v4
+      - name: Install SWIG
+        run: brew install swig
+      - name: Check swig
+        run: swig -version
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{matrix.python.version}}
+      - name: Update Path
+        run: |
+          echo "$HOME/Library/Python/${{matrix.python.version}}/bin" >> $GITHUB_PATH
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Check CMake
+        run: cmake --version
+      - name: Configure
+        run: >
+          cmake -S. -Bbuild
+          -G "${{matrix.cmake.generator}}"
+          -DCMAKE_BUILD_TYPE=${{matrix.cmake.config}}
+          -DBUILD_PYTHON=ON
+          -DCMAKE_INSTALL_PREFIX=install
+      - name: Build
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.build_target}}
+          -v -j2
+      - name: Test
+        run: >
+          CTEST_OUTPUT_ON_FAILURE=1
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.test_target}}
+          -v
+      - name: Install
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.install_target}}
+          -v
+
+  amd64_macos_python:
+    runs-on: ubuntu-latest
+    needs: native
+    steps:
+      - uses: actions/checkout@v4
