--- a/.github/workflows/amd64_windows_python.yml
+++ b/.github/workflows/amd64_windows_python.yml
@@ -3,26 +3,67 @@ name: amd64 Windows Python
 
 on: [push, pull_request, workflow_dispatch]
 
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
+
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
-  visual-studio:
+  native:
+    strategy:
+      matrix:
+        cmake: [
+          {name: "VS22", generator: "Visual Studio 17 2022", config: "Release", build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: INSTALL},
+        ]
+        python: [
+          {version: "3.9"},
+          #{version: "3.10"},
+          #{version: "3.11"},
+          {version: "3.12"},
+          {version: "3.13"},
+        ]
+      fail-fast: false
+    name: amd64•Windows•CMake(${{matrix.cmake.name}})•Py${{matrix.python.version}}
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Install SWIG 4.0.2
-      run: |
-        (New-Object System.Net.WebClient).DownloadFile("http://prdownloads.sourceforge.net/swig/swigwin-4.0.2.zip","swigwin-4.0.2.zip");
-        Expand-Archive .\swigwin-4.0.2.zip .;
-        echo "$((Get-Item .).FullName)/swigwin-4.0.2" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-    - name: Check swig
-      run: swig -version
-    - name: Check cmake
-      run: cmake --version
-    - name: Configure
-      run: cmake -S. -Bbuild -G "Visual Studio 17 2022" -DCMAKE_CONFIGURATION_TYPES=Release -DCMAKE_INSTALL_PREFIX=install -DBUILD_PYTHON=ON
-    - name: Build
-      run: cmake --build build --config Release --target ALL_BUILD -v
-    - name: Test
-      run: cmake --build build --config Release --target RUN_TESTS -v
-    - name: Install
-      run: cmake --build build --config Release --target INSTALL -v
+      - uses: actions/checkout@v4
+      - name: Install SWIG
+        run: |
+          (New-Object System.Net.WebClient).DownloadFile("http://prdownloads.sourceforge.net/swig/swigwin-4.3.0.zip","swigwin-4.3.0.zip");
+          Expand-Archive .\swigwin-4.3.0.zip .;
+          echo "$((Get-Item .).FullName)/swigwin-4.3.0" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      - name: Check swig
+        run: swig -version
+      - name: Check CMake
+        run: cmake --version
+      - name: Configure
+        run: >
+          cmake -S. -Bbuild
+          -G "${{matrix.cmake.generator}}"
+          -DCMAKE_CONFIGURATION_TYPES=${{matrix.cmake.config}}
+          -DBUILD_PYTHON=ON
+          -DCMAKE_INSTALL_PREFIX=install
+      - name: Build
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.build_target}}
+          -v -j2
+      - name: Test
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.test_target}}
+          -v
+      - name: Install
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.install_target}}
+          -v
+
+  amd64_windows_python:
+    runs-on: ubuntu-latest
+    needs: native
+    steps:
+      - uses: actions/checkout@v4
