--- a/.github/workflows/arm64_macos_dotnet.yml
+++ b/.github/workflows/arm64_macos_dotnet.yml
@@ -1,5 +1,5 @@
 # ref: https://github.com/actions/runner-images
-name: amd64 Windows Java
+name: arm64 MacOS .Net
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -13,32 +13,32 @@ jobs:
     strategy:
       matrix:
         cmake: [
-          {name: "VS22", generator: "Visual Studio 17 2022", config: "Release", build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: INSTALL},
+          {name: "Xcode", generator: "Xcode", config: Release, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: install},
+          {name: "Make", generator: "Unix Makefiles", config: Release, build_target: all, test_target: test, install_target: install},
         ]
       fail-fast: false
-    name: amd64•Windows•CMake(${{matrix.cmake.name}})•Java
-    runs-on: windows-latest
+    name: arm64•MacOS•CMake(${{matrix.cmake.name}})•.Net
+    runs-on: macos-latest # macos arm64 based runner
     steps:
       - uses: actions/checkout@v4
       - name: Install SWIG
-        run: |
-          (New-Object System.Net.WebClient).DownloadFile("http://prdownloads.sourceforge.net/swig/swigwin-4.3.0.zip","swigwin-4.3.0.zip");
-          Expand-Archive .\swigwin-4.3.0.zip .;
-          echo "$((Get-Item .).FullName)/swigwin-4.3.0" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        run: brew install swig
       - name: Check swig
         run: swig -version
-      - name: Check Java
-        run: |
-          java -version
-          mvn.cmd --version
+      - name: Setup .NET 8.0
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Check dotnet
+        run: dotnet --info
       - name: Check CMake
         run: cmake --version
       - name: Configure
         run: >
           cmake -S. -Bbuild
           -G "${{matrix.cmake.generator}}"
-          -DCMAKE_CONFIGURATION_TYPES=${{matrix.cmake.config}}
-          -DBUILD_JAVA=ON -DSKIP_GPG=ON
+          -DCMAKE_BUILD_TYPE=${{matrix.cmake.config}}
+          -DBUILD_DOTNET=ON
           -DCMAKE_INSTALL_PREFIX=install
       - name: Build
         run: >
@@ -48,6 +48,7 @@ jobs:
           -v -j2
       - name: Test
         run: >
+          CTEST_OUTPUT_ON_FAILURE=1
           cmake --build build
           --config ${{matrix.cmake.config}}
           --target ${{matrix.cmake.test_target}}
@@ -59,7 +60,7 @@ jobs:
           --target ${{matrix.cmake.install_target}}
           -v
 
-  amd64_windows_java:
+  arm64_macos_dotnet:
     runs-on: ubuntu-latest
     needs: native
     steps:
