--- a/.github/workflows/arm64_macos_python.yml
+++ b/.github/workflows/arm64_macos_python.yml
@@ -1,5 +1,5 @@
 # ref: https://github.com/actions/runner-images
-name: amd64 Windows Java
+name: arm64 MacOS Python
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -13,32 +13,41 @@ jobs:
     strategy:
       matrix:
         cmake: [
-          {name: "VS22", generator: "Visual Studio 17 2022", config: "Release", build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: INSTALL},
+          {name: "Xcode", generator: "Xcode", config: Release, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: install},
+          {name: "Make", generator: "Unix Makefiles", config: Release, build_target: all, test_target: test, install_target: install},
+        ]
+        python: [
+          {version: "3.9"},
+          #{version: "3.10"},
+          #{version: "3.11"},
+          {version: "3.12"},
+          {version: "3.13"},
         ]
       fail-fast: false
-    name: amd64•Windows•CMake(${{matrix.cmake.name}})•Java
-    runs-on: windows-latest
+    name: amd64•MacOS•CMake(${{matrix.cmake.name}})•Py${{matrix.python.version}}
+    runs-on: macos-13 # last macos intel based runner
     steps:
       - uses: actions/checkout@v4
       - name: Install SWIG
-        run: |
-          (New-Object System.Net.WebClient).DownloadFile("http://prdownloads.sourceforge.net/swig/swigwin-4.3.0.zip","swigwin-4.3.0.zip");
-          Expand-Archive .\swigwin-4.3.0.zip .;
-          echo "$((Get-Item .).FullName)/swigwin-4.3.0" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        run: brew install swig
       - name: Check swig
         run: swig -version
-      - name: Check Java
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{matrix.python.version}}
+      - name: Update Path
         run: |
-          java -version
-          mvn.cmd --version
+          echo "$HOME/Library/Python/${{matrix.python.version}}/bin" >> $GITHUB_PATH
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Check CMake
         run: cmake --version
       - name: Configure
         run: >
           cmake -S. -Bbuild
           -G "${{matrix.cmake.generator}}"
-          -DCMAKE_CONFIGURATION_TYPES=${{matrix.cmake.config}}
-          -DBUILD_JAVA=ON -DSKIP_GPG=ON
+          -DCMAKE_BUILD_TYPE=${{matrix.cmake.config}}
+          -DBUILD_PYTHON=ON
           -DCMAKE_INSTALL_PREFIX=install
       - name: Build
         run: >
@@ -48,6 +57,7 @@ jobs:
           -v -j2
       - name: Test
         run: >
+          CTEST_OUTPUT_ON_FAILURE=1
           cmake --build build
           --config ${{matrix.cmake.config}}
           --target ${{matrix.cmake.test_target}}
@@ -59,7 +69,7 @@ jobs:
           --target ${{matrix.cmake.install_target}}
           -v
 
-  amd64_windows_java:
+  arm64_macos_python:
     runs-on: ubuntu-latest
     needs: native
     steps:
