--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,20 +10,20 @@ endforeach()
 if(BUILD_DOTNET)
   file(GLOB DOTNET_SRCS "*.cs")
   foreach(FILE_NAME IN LISTS DOTNET_SRCS)
-    add_dotnet_example(${FILE_NAME})
+    add_dotnet_example(FILE_NAME ${FILE_NAME})
   endforeach()
 endif()
 
 if(BUILD_JAVA)
   file(GLOB JAVA_SRCS "*.java")
   foreach(FILE_NAME IN LISTS JAVA_SRCS)
-    add_java_example(${FILE_NAME})
+    add_java_example(FILE_NAME ${FILE_NAME})
   endforeach()
 endif()
 
 if(BUILD_PYTHON)
   file(GLOB PYTHON_SRCS "*.py")
   foreach(FILE_NAME IN LISTS PYTHON_SRCS)
-    add_python_example(${FILE_NAME})
+    add_python_example(FILE_NAME ${FILE_NAME})
   endforeach()
 endif()
