--- a/dotnet/Example.csproj.in
+++ b/dotnet/Example.csproj.in
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>@DOTNET_SAMPLE_LANG@</LangVersion>
     @DOTNET_TFM@
     <EnableDefaultItems>false</EnableDefaultItems>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <!-- see https://github.com/dotnet/docs/issues/12237 -->
     <RollForward>LatestMajor</RollForward>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <AssemblyName>@DOTNET_PROJECT@.@EXAMPLE_NAME@</AssemblyName>
+    <AssemblyName>@DOTNET_PROJECT@.@COMPONENT_NAME@.@EXAMPLE_NAME@</AssemblyName>
     <Version>@PROJECT_VERSION@</Version>
 
     <!-- Nuget Properties -->
@@ -16,11 +16,12 @@
 
     <!-- Pack Option -->
     <IsPackable>true</IsPackable>
-    <Title>@DOTNET_PROJECT@.@EXAMPLE_NAME@ v@PROJECT_VERSION@</Title>
-    <PackageId>@DOTNET_PROJECT@.@EXAMPLE_NAME@</PackageId>
+    <Title>@DOTNET_PROJECT@.@COMPONENT_NAME@.@EXAMPLE_NAME@ v@PROJECT_VERSION@</Title>
+    <PackageId>@DOTNET_PROJECT@.@COMPONENT_NAME@.@EXAMPLE_NAME@</PackageId>
     <PackageTags>sample</PackageTags>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageOutputPath>@DOTNET_PACKAGES_DIR@/samples</PackageOutputPath>
 
     <!-- Signing -->
     <SignAssembly>false</SignAssembly>
@@ -40,7 +41,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="@FILE_NAME@" />
+    <Compile Include="@EXAMPLE_FILE_NAME@" />
+
     <PackageReference Include="@DOTNET_PROJECT@" Version="@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.*" />
   </ItemGroup>
 </Project>
