--- a/dotnet/Mizux.CMakeSwig.csproj.in
+++ b/dotnet/Mizux.CMakeSwig.csproj.in
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>@DOTNET_LANG@</LangVersion>
     @DOTNET_TFM@
-    <RuntimeIdentifier>@RUNTIME_IDENTIFIER@</RuntimeIdentifier>
+    <RuntimeIdentifier>@DOTNET_RID@</RuntimeIdentifier>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyName>@DOTNET_PROJECT@</AssemblyName>
     <Version>@PROJECT_VERSION@</Version>
@@ -21,23 +21,21 @@
     <SignAssembly>false</SignAssembly>
     <PublicSign>false</PublicSign>
     <DelaySign>false</DelaySign>
+
+    <!-- DefaultItems -->
+    <EnableDefaultItems>true</EnableDefaultItems>
+    <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
   </PropertyGroup>
 
   <!-- Validate at least one runtime package has been generated -->
-  <Target Name="ValidateRuntimePack" BeforeTargets="GenerateNuspec">
+  <Target Name="ValidateRuntimePackage" BeforeTargets="GenerateNuspec">
     <ItemGroup>
-      <RuntimeLinux Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.linux-x64.*.nupkg"/>
-      <RuntimeOsx Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.osx-x64.*.nupkg"/>
-      <RuntimeWin Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.win-x64.*.nupkg"/>
+      <RuntimePackage Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.@DOTNET_RID@.*.nupkg"/>
     </ItemGroup>
-    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.linux-x64: found" Condition="Exists('@(RuntimeLinux)')"/>
-    <Message Importance="high" Text="-------  $(OS)  "/>
-    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.linux-x64: not found" Condition="!Exists('@(RuntimeLinux)')"/>
-    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.osx-x64: found" Condition="Exists('@(RuntimeOsx)')"/>
-    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.osx-x64: not found" Condition="!Exists('@(RuntimeOsx)')"/>
-    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.win-x64: found" Condition="Exists('@(RuntimeWin)')"/>
-    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.win-x64: not found" Condition="!Exists('@(RuntimeWin)')"/>
-    <Error Text="You must locally 'dotnet pack' at least one @DOTNET_PROJECT@.runtime.{rid} Project." Condition="!Exists('@(RuntimeLinux)') AND !Exists('@(RuntimeOsx)') AND !Exists('@(RuntimeWin)')"/>
+    <Message Importance="high" Text="------- $(OS)"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.@DOTNET_RID@: found" Condition="Exists('@(RuntimePackage)')"/>
+    <Message Importance="high" Text="Package @DOTNET_PROJECT@.runtime.@DOTNET_RID@: not found" Condition="!Exists('@(RuntimePackage)')"/>
+    <Error Text="You must locally 'dotnet pack' the @DOTNET_PROJECT@.runtime.@DOTNET_RID@ Project." Condition="!Exists('@(RuntimePackage)')"/>
   </Target>
 
   <!-- Need to add required runtime dependencies so Meta-Project will pull runtime Nuget(s) -->
@@ -46,12 +44,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <RuntimeLinux Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.linux-x64.*.nupkg"/>
-    <RuntimeOsx Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.osx-x64.*.nupkg"/>
-    <RuntimeWin Include="@DOTNET_PACKAGES_DIR@/@DOTNET_PROJECT@.runtime.win-x64.*.nupkg"/>
-    <PackageReference Include="@DOTNET_PROJECT@.runtime.linux-x64" Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeLinux)')"/>
-    <PackageReference Include="@DOTNET_PROJECT@.runtime.osx-x64"   Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeOsx)')"  />
-    <PackageReference Include="@DOTNET_PROJECT@.runtime.win-x64"   Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeWin)')"  />
+    <PackageReference Include="@DOTNET_PROJECT@.runtime.@DOTNET_RID@" Version="@PROJECT_VERSION@"/>
   </ItemGroup>
 </Project>
 
