--- a/dotnet/Mizux.CMakeSwig.runtime.csproj.in
+++ b/dotnet/Mizux.CMakeSwig.runtime.csproj.in
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     @DOTNET_TFM@
-    <RuntimeIdentifier>@RUNTIME_IDENTIFIER@</RuntimeIdentifier>
+    <RuntimeIdentifier>@DOTNET_RID@</RuntimeIdentifier>
     <AssemblyName>mizux-cmakeswig-native</AssemblyName>
     <Version>@PROJECT_VERSION@</Version>
 
@@ -11,7 +11,7 @@
     <IncludeBuildOutput>false</IncludeBuildOutput>
 
     <!-- Pack Option -->
-    <Title>@DOTNET@ @RUNTIME_IDENTIFIER@ v@PROJECT_VERSION@</Title>
+    <Title>@DOTNET@ @DOTNET_RID@ v@PROJECT_VERSION@</Title>
     <PackageId>@DOTNET_NATIVE_PROJECT@</PackageId>
 
     <!-- Signing -->
@@ -29,7 +29,7 @@
       $<$<STREQUAL:$<TARGET_PROPERTY:Foo,TYPE>,SHARED_LIBRARY>:;$<TARGET_SONAME_FILE:Foo>>
       $<$<STREQUAL:$<TARGET_PROPERTY:FooBar,TYPE>,SHARED_LIBRARY>:;$<TARGET_SONAME_FILE:FooBar>>
     ">
-      <PackagePath>runtimes/@RUNTIME_IDENTIFIER@/native/%(Filename)%(Extension)</PackagePath>
+      <PackagePath>runtimes/@DOTNET_RID@/native/%(Filename)%(Extension)</PackagePath>
       <Pack>true</Pack>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
